test/corpus/ADC.txt
==========================
ADC #$BB
==========================

adc #$b3
adc #233
adc #%1101110

---

(asm
  (inst
    (imm_opc
      (adc_opc)
      (imm_prefix)
      (num_8
        (hex_num_8))))
  (inst
    (imm_opc
      (adc_opc)
      (imm_prefix)
      (num_8
        (dec_num_8))))
  (inst
    (imm_opc
      (adc_opc)
      (imm_prefix)
      (num_8
        (bin_num_8)))))

==========================
ADC $LL
==========================

adc $02
adc 005
adc %11011001

---

(asm
  (inst
    (zpg_opc
      (adc_opc)
      (num_8
        (hex_num_8))))
  (inst
    (zpg_opc
      (adc_opc)
      (num_8
        (dec_num_8))))
  (inst
    (zpg_opc
      (adc_opc)
      (num_8
        (bin_num_8)))))

==========================
ADC $LL,X
==========================

adc $60,x
adc 199,x
adc %1001100,x

---

(asm
  (inst
    (zpg_x_opc
      (adc_opc)
      (num_8
        (hex_num_8))
      (comma)
      (x_reg)))
  (inst
    (zpg_x_opc
      (adc_opc)
      (num_8
        (dec_num_8))
      (comma)
      (x_reg)))
  (inst
    (zpg_x_opc
      (adc_opc)
      (num_8
        (bin_num_8))
      (comma)
      (x_reg))))

==========================
ADC $LLHH
==========================

adc $b891
adc 47249
adc %1011100010010001

---

(asm
  (inst
    (abs_opc
      (adc_opc)
      (num_16
        (hex_num_16))))
  (inst
    (abs_opc
      (adc_opc)
      (num_16
        (dec_num_16))))
  (inst
    (abs_opc
      (adc_opc)
      (num_16
        (bin_num_16)))))

==========================
ADC $LLHH,X
==========================

adc $85fc,x
adc 1843,x
adc %11011100111000,x

---

(asm
  (inst
    (abs_x_opc
      (adc_opc)
      (num_16
        (hex_num_16))
      (comma)
      (x_reg)))
  (inst
    (abs_x_opc
      (adc_opc)
      (num_16
        (dec_num_16))
      (comma)
      (x_reg)))
  (inst
    (abs_x_opc
      (adc_opc)
      (num_16
        (bin_num_16))
      (comma)
      (x_reg))))

==========================
ADC $LLHH,Y
==========================

adc $dc49,y
adc 56393,y
adc %1101110001001001,y

---

(asm
  (inst
    (abs_y_opc
      (adc_opc)
      (num_16
        (hex_num_16))
      (comma)
      (y_reg)))
  (inst
    (abs_y_opc
      (adc_opc)
      (num_16
        (dec_num_16))
      (comma)
      (y_reg)))
  (inst
    (abs_y_opc
      (adc_opc)
      (num_16
        (bin_num_16))
      (comma)
      (y_reg))))

==========================
ADC ($LL,X)
==========================

adc ($DB, x)
adc (219, x)
adc (%11011011, x)

---

(asm
  (inst
    (x_ind_opc
      (adc_opc)
      (l_parentheis)
      (num_8
        (hex_num_8))
      (comma)
      (x_reg)
      (r_parentheis)))
  (inst
    (x_ind_opc
      (adc_opc)
      (l_parentheis)
      (num_8
        (dec_num_8))
      (comma)
      (x_reg)
      (r_parentheis)))
  (inst
    (x_ind_opc
      (adc_opc)
      (l_parentheis)
      (num_8
        (bin_num_8))
      (comma)
      (x_reg)
      (r_parentheis))))

==========================
ADC ($LL),Y
==========================

adc ($A9),y
adc (169),y
adc (%10101001),y

---

(asm
  (inst
    (ind_y_opc
      (adc_opc)
      (l_parentheis)
      (num_8
        (hex_num_8))
      (r_parentheis)
      (comma)
      (y_reg)))
  (inst
    (ind_y_opc
      (adc_opc)
      (l_parentheis)
      (num_8
        (dec_num_8))
      (r_parentheis)
      (comma)
      (y_reg)))
  (inst
    (ind_y_opc
      (adc_opc)
      (l_parentheis)
      (num_8
        (bin_num_8))
      (r_parentheis)
      (comma)
      (y_reg))))
