test/corpus/AND.txt
==========================
AND #$BB
==========================

and #$b3
and #233
and #%1101110

---

(asm
  (inst
    (imm_opc
      (and_opc)
      (num_8
        (hex_num_8))))
  (inst
    (imm_opc
      (and_opc)
      (num_8
        (dec_num_8))))
  (inst
    (imm_opc
      (and_opc)
      (num_8
        (bin_num_8)))))

==========================
AND $LL
==========================

and $02
and 005
and %11011001

---

(asm
  (inst
    (zpg_opc
      (and_opc)
      (num_8
        (hex_num_8))))
  (inst
    (zpg_opc
      (and_opc)
      (num_8
        (dec_num_8))))
  (inst
    (zpg_opc
      (and_opc)
      (num_8
        (bin_num_8)))))

==========================
AND $LL,X
==========================

and $60,x
and 199,x
and %1001100,x

---

(asm
  (inst
    (zpg_x_opc
      (and_opc)
      (num_8
        (hex_num_8))
      (comma)
      (x_reg)))
  (inst
    (zpg_x_opc
      (and_opc)
      (num_8
        (dec_num_8))
      (comma)
      (x_reg)))
  (inst
    (zpg_x_opc
      (and_opc)
      (num_8
        (bin_num_8))
      (comma)
      (x_reg))))

==========================
AND $LLHH
==========================

and $b891
and 47249
and %1011100010010001

---

(asm
  (inst
    (abs_opc
      (and_opc)
      (num_16
        (hex_num_16))))
  (inst
    (abs_opc
      (and_opc)
      (num_16
        (dec_num_16))))
  (inst
    (abs_opc
      (and_opc)
      (num_16
        (bin_num_16)))))

==========================
AND $LLHH,X
==========================

and $85fc,x
and 1843,x
and %11011100111000,x

---

(asm
  (inst
    (abs_x_opc
      (and_opc)
      (num_16
        (hex_num_16))
      (comma)
      (x_reg)))
  (inst
    (abs_x_opc
      (and_opc)
      (num_16
        (dec_num_16))
      (comma)
      (x_reg)))
  (inst
    (abs_x_opc
      (and_opc)
      (num_16
        (bin_num_16))
      (comma)
      (x_reg))))

==========================
AND $LLHH,Y
==========================

and $dc49,y
and 56393,y
and %1101110001001001,y

---

(asm
  (inst
    (abs_y_opc
      (and_opc)
      (num_16
        (hex_num_16))
      (comma)
      (y_reg)))
  (inst
    (abs_y_opc
      (and_opc)
      (num_16
        (dec_num_16))
      (comma)
      (y_reg)))
  (inst
    (abs_y_opc
      (and_opc)
      (num_16
        (bin_num_16))
      (comma)
      (y_reg))))

==========================
AND ($LL,X)
==========================

and ($DB, x)
and (219, x)
and (%11011011, x)

---

(asm
  (inst
    (x_ind_opc
      (and_opc)
      (l_parentheis)
      (num_8
        (hex_num_8))
      (comma)
      (x_reg)
      (r_parentheis)))
  (inst
    (x_ind_opc
      (and_opc)
      (l_parentheis)
      (num_8
        (dec_num_8))
      (comma)
      (x_reg)
      (r_parentheis)))
  (inst
    (x_ind_opc
      (and_opc)
      (l_parentheis)
      (num_8
        (bin_num_8))
      (comma)
      (x_reg)
      (r_parentheis))))

==========================
AND ($LL),Y
==========================

and ($A9), y
and (169), y
and (%10101001), y

---

(asm
  (inst
    (ind_y_opc
      (and_opc)
      (l_parentheis)
      (num_8
        (hex_num_8))
      (r_parentheis)
      (comma)
      (y_reg)))
  (inst
    (ind_y_opc
      (and_opc)
      (l_parentheis)
      (num_8
        (dec_num_8))
      (r_parentheis)
      (comma)
      (y_reg)))
  (inst
    (ind_y_opc
      (and_opc)
      (l_parentheis)
      (num_8
        (bin_num_8))
      (r_parentheis)
      (comma)
      (y_reg))))
