test/corpus/ASL.txt
==========================
ASL A
==========================

asl
asl a

---

(asm
  (inst
    (acc_opc
      (asl_opc)))
  (inst
    (acc_opc
      (asl_opc)
      (a_reg))))

==========================
ASL $LL
==========================

asl $02
asl 005
asl %11011001

---

(asm
  (inst
    (zpg_opc
      (asl_opc)
      (num_8
        (hex_num_8))))
  (inst
    (zpg_opc
      (asl_opc)
      (num_8
        (dec_num_8))))
  (inst
    (zpg_opc
      (asl_opc)
      (num_8
        (bin_num_8)))))

==========================
ASL $LL,X
==========================

asl $60, x
asl 199, x
asl %1001100, x

---

(asm
  (inst
    (zpg_x_opc
      (asl_opc)
      (num_8
        (hex_num_8))
      (x_reg)))
  (inst
    (zpg_x_opc
      (asl_opc)
      (num_8
        (dec_num_8))
      (x_reg)))
  (inst
    (zpg_x_opc
      (asl_opc)
      (num_8
        (bin_num_8))
      (x_reg))))

==========================
ASL $LLHH
==========================

asl $b891
asl 47249
asl %1011100010010001

---

(asm
  (inst
    (abs_opc
      (asl_opc)
      (num_16
        (hex_num_16))))
  (inst
    (abs_opc
      (asl_opc)
      (num_16
        (dec_num_16))))
  (inst
    (abs_opc
      (asl_opc)
      (num_16
        (bin_num_16)))))

==========================
ASL $LLHH,X
==========================

asl $85fc,x
asl 1843,x
asl %11011100111000,x

---

(asm
  (inst
    (abs_x_opc
      (asl_opc)
      (num_16
        (hex_num_16))
      (x_reg)))
  (inst
    (abs_x_opc
      (asl_opc)
      (num_16
        (dec_num_16))
      (x_reg)))
  (inst
    (abs_x_opc
      (asl_opc)
      (num_16
        (bin_num_16))
      (x_reg))))
