test/corpus/CMP.txt
==========================
CMP #$BB
==========================

cmp #$b3
cmp #233
cmp #%1101110

---

(asm
  (inst
    (imm_opc
      (cmp_opc)
      (imm_prefix)
      (num_8
        (hex_num_8))))
  (inst
    (imm_opc
      (cmp_opc)
      (imm_prefix)
      (num_8
        (dec_num_8))))
  (inst
    (imm_opc
      (cmp_opc)
      (imm_prefix)
      (num_8
        (bin_num_8)))))

==========================
CMP $LL
==========================

cmp $02
cmp 005
cmp %11011001

---

(asm
  (inst
    (zpg_opc
      (cmp_opc)
      (num_8
        (hex_num_8))))
  (inst
    (zpg_opc
      (cmp_opc)
      (num_8
        (dec_num_8))))
  (inst
    (zpg_opc
      (cmp_opc)
      (num_8
        (bin_num_8)))))

==========================
CMP $LL,X
==========================

cmp $60,x
cmp 199,x
cmp %1001100,x

---

(asm
  (inst
    (zpg_x_opc
      (cmp_opc)
      (num_8
        (hex_num_8))
      (comma)
      (x_reg)))
  (inst
    (zpg_x_opc
      (cmp_opc)
      (num_8
        (dec_num_8))
      (comma)
      (x_reg)))
  (inst
    (zpg_x_opc
      (cmp_opc)
      (num_8
        (bin_num_8))
      (comma)
      (x_reg))))

==========================
CMP $LLHH
==========================

cmp $b891
cmp 47249
cmp %1011100010010001

---

(asm
  (inst
    (abs_opc
      (cmp_opc)
      (num_16
        (hex_num_16))))
  (inst
    (abs_opc
      (cmp_opc)
      (num_16
        (dec_num_16))))
  (inst
    (abs_opc
      (cmp_opc)
      (num_16
        (bin_num_16)))))

==========================
CMP $LLHH,X
==========================

cmp $85fc,x
cmp 1843,x
cmp %11011100111000,x

---

(asm
  (inst
    (abs_x_opc
      (cmp_opc)
      (num_16
        (hex_num_16))
      (comma)
      (x_reg)))
  (inst
    (abs_x_opc
      (cmp_opc)
      (num_16
        (dec_num_16))
      (comma)
      (x_reg)))
  (inst
    (abs_x_opc
      (cmp_opc)
      (num_16
        (bin_num_16))
      (comma)
      (x_reg))))

==========================
CMP $LLHH,Y
==========================

cmp $dc49,y
cmp 56393,y
cmp %1101110001001001,y

---

(asm
  (inst
    (abs_y_opc
      (cmp_opc)
      (num_16
        (hex_num_16))
      (comma)
      (y_reg)))
  (inst
    (abs_y_opc
      (cmp_opc)
      (num_16
        (dec_num_16))
      (comma)
      (y_reg)))
  (inst
    (abs_y_opc
      (cmp_opc)
      (num_16
        (bin_num_16))
      (comma)
      (y_reg))))

==========================
CMP ($LL,X)
==========================

cmp ($DB,x)
cmp (219,x)
cmp (%11011011,x)

---
